--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
         "amphp/dns": "^0.9.9",
         "amphp/file": "^0.3.3",
         "amphp/uri": "^0.1.3",
-        "amphp/websocket": "^0.2",
-        "amphp/websocket-client": "^0.2"
+        "amphp/http": "dev-master",
+        "amphp/websocket": "dev-master",
+        "amphp/websocket-client": "dev-master"
     },
     "require-dev": {
         "phpdocumentor/reflection-docblock": "^3.1"
